--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "client-sessions": "^0.7.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "fs": "0.0.2",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "node-rsa": "^0.3.2",
     "serve-favicon": "~2.3.0",
-    "socket.io": "^1.4.5",
-    "sqlite3": "^3.1.3"
+    "socket.io": "^1.4.5"
   }
 }
