--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-rsa": "^0.3.2",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5",
     "sqlite3": "^3.1.3"
   }
 }
